--- a/client/t/index.html
+++ b/client/t/index.html
@@ -26,7 +26,7 @@ body {
 #taskbar1 {
     position: absolute;
     top: 0px;
-    left: 0px;
+    left: 40%;
     right: 0px;
     margin: 0px;
     padding: 0.25em;
@@ -37,7 +37,7 @@ body {
 
 #taskbar2 {
     position: absolute;
-    left: 0px;
+    left: 40%;
     right: 0px;
     bottom: 0px;
     margin: 0px;
