better checks in fs funcs; ff3.6 now passing tests

--- a/client/t/index.html
+++ b/client/t/index.html
@@ -60,7 +60,7 @@ body {
     <script type="text/javascript" src="tests.js"></script>
 </head>
 <body>
-    <div id="-qunit" style="margin-top: 40px; margin-bottom: 40px; width: 40%;">
+    <div id="-qunit" style="width: 40%;">
     	<h1 id="qunit-header">Atomic-OS: Client Test Suite</h1>
 	    <h2 id="qunit-banner"></h2>
     	<div id="qunit-testrunner-toolbar"></div>
