--- a/index.html
+++ b/index.html
@@ -1947,6 +1947,12 @@ function grabSelectedText(n){
 
 </script>
 <style>
+.stretch {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 .filesystem {
   display: none;
 }
@@ -2075,6 +2081,7 @@ function initProcess() {
 
   var loc = window.location.toString();
 
+/*
   // If we're in Tutorial Mode...
   if (tutorialMode > 0) {
     // IF VIEWING locally, launch a shell...
@@ -2089,6 +2096,7 @@ function initProcess() {
   } else { // If we're not in Tutorial Mode...
     shellExecute('/sbin/wash', ['cat /home/guest/readme', '-i']);
   }// endif tutorialMode
+*/
 }
 
 </script>
@@ -2122,7 +2130,7 @@ function initProcess() {
  <!-- The declare/define the files -->
 
  <div id="var_log_errors" class="rom"></div>
- <div id="etc_microblog" class="rom"><div style="position: absolute; width: 100%; height: 100%; background-image: url(images/wallpaper/atomos-1.0.png);"><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><center><table border="0" width="50%" style="background-color: #fff; border: 2px outset #ddd;"><tr><td>%content%</td></tr></table></center></div></div>
+ <div id="etc_microblog" class="rom"><div style="position: absolute; width: 100%; height: 100%; background-image: url(http://projects.psema4.com/atomos/images/wallpaper/atomos-1.0.png); -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;"><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><center><table border="0" width="50%" style="background-color: #fff; border: 2px outset #ddd;"><tr><td>%content%</td></tr></table></center></div></div>
  <div id="var_microblog_default" class="rom"><h2>MicroBlog</h2><p><span style="font-weight: bold;">09/09/2007</span><br></p><p>This is an example application, built and powered by Atomic OS v1.0.&nbsp; It really doesn't do much, except offer an idea of how Atomic OS can be used to create, build, and package applications entirely within a single HTML document.<br></p> <a href="javascript://" onclick="eval('ROOTFS.proc.' + CALLEROBJ._name + '._update(\'default2\')')">Next Entry</a><br> <a href="javascript://" onclick="eval('ROOTFS.proc.desktop.' + CALLEROBJ._name + '.titlebar.btnClose._dom.onclick()')">Close</a></div>
  <div id="var_microblog_default2" class="rom"><h2>MicroBlog #2</h2><p><span style="font-weight: bold;">09/09/2007</span><br></p><p>This is another example page of our pseudo-blog application.&nbsp; Not much here.&nbsp; ;-)<br></p> <a href="javascript://" onclick="eval('ROOTFS.proc.' + CALLEROBJ._name + '._update(\'default\')')">Previous Entry</a> | <a href="javascript://" onclick="eval('ROOTFS.proc.' + CALLEROBJ._name + '._update(\'default3\')')">Next Entry</a><br> <a href="javascript://" onclick="eval('ROOTFS.proc.desktop.' + CALLEROBJ._name + '.titlebar.btnClose._dom.onclick()')">Close</a></div>
  <div id="var_microblog_default3" class="rom"><h2>MicroBlog #3</h2><p><span style="font-weight: bold;">09/09/2007</span><br></p><p>And this is the final example page of our MicroBlog application.&nbsp; Hope you find it a useful introduction to programming rich DHTML applications.</p><p>PS. DHTML is what they <span style="font-style: italic;">used</span> to call AJAX.<br></p> <a href="javascript://" onclick="eval('ROOTFS.proc.' + CALLEROBJ._name + '._update(\'default2\')')">Previous Entry</a><br> <a href="javascript://" onclick="eval('ROOTFS.proc.desktop.' + CALLEROBJ._name + '.titlebar.btnClose._dom.onclick()')">Close</a></div>
@@ -3307,12 +3315,12 @@ That's all there is to it!
  </div>
 
  <div id="sbin_initrc" class="rom">
-  // v0.1 by selcomb
+  // v0.2 by selcomb
 
   // Set the Atomic OS Version Identifier
   var ver = new INODE('version','text');
   ROOTFS.proc._addChild(ver);
-  ROOTFS.proc.version._write('Atomic OS Version 1.0 Build 46 (PRE-ALPHA)');
+  ROOTFS.proc.version._write('Atomic OS v1.0.46 (gh-pages bootstrap)');
 
   // Add some application launchers to the desktop
   var consoleImg = ROOTFS.mnt.media.cc.apps.console._read();
@@ -3349,12 +3357,17 @@ That's all there is to it!
     CALLEROBJ._mainWindow.titlebar.dragbar._dom.style.height = '30px';
   });
 
+/*
   KERNEL.WSAPI.createLauncher('Blog', 32, 288, 'Blog', microblogImg, function() {
     var processObject = shellExecute('/bin/microblog', []);
     if(CALLEROBJ) CALLEROBJ._mainWindow.titlebar.dragbar._dom.style.height = '100%';
     CALLEROBJ = processObject;
     CALLEROBJ._mainWindow.titlebar.dragbar._dom.style.height = '30px';
   });
+*/
+
+  shellExecute('/bin/theme', []);
+  DESKTOP._dom.className = 'stretch';
 
   env.kill = true;
  </div>
