--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Atomic OS</title>
-        <script data-main="scripts/main" src="scripts/atomos.js"></script>
+        <script src="scripts/atomos.js"></script>
         <style>
 #fileroot,
 .HxFile {
