basic console window, /bin/* updated with stdin/stdout/stderr refs

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,11 +4,8 @@
         <title>Atomic OS</title>
         <script src="scripts/atomos.js"></script>
         <style>
-#fileroot,
-.HxFile {
-    display: none;
-}
-
+.titlebar { color: #fff; font-weight: bold; background-color: #00f; height: 20px; padding: 4px; border: 1px inset #eee; }
+#fileroot, .HxFile { display: none; }
 #winroot {
     position: absolute;
     top: 0px;
